fixing issue with scroll on tablet and mobile

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden
+}
+
 .home {
   margin-bottom: 100px;
 }
